--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
       <artifactId>gson</artifactId>
       <version>2.8.6</version>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.6.2</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
