--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,20 +2,33 @@ name: Deploy new version
 
 on:
   release:
-    types: [created]
+    types:
+      - created
+
+env:
+  RELEASE_TAG_NAME: ${{ github.event.release.tag_name }}
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-      
-    - uses: actions/setup-java@v1
-      with:
-        java-version: 14
-        server-id: github
-        settings-path: ${{ github.workspace }} 
+      - uses: actions/checkout@v2
 
-    - run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 14
+          settings-path: ${{ github.workspace }}
+
+      - run: mvn package
+
+      - id: tagToVersion
+        run: echo '::set-output name=version::${RELEASE_TAG_NAME:1}'
+
+      - uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./target/json-rpc-${{ steps.tagToVersion.outputs.version }}.jar
+          asset_name: JsonRpc4J ${{ github.event.release.tag_name }}
+          asset_content_type: application/java-archive
+
+      - run: mvn deploy -s ./settings.xml
