--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,15 +1,15 @@
 name: Test code base
 
-on: [ pull_request ]
+on: [pull_request, push]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      
+
       - uses: actions/setup-java@v1
         with:
           java-version: 14
-          
+
       - run: mvn test
