--- a/pom.xml
+++ b/pom.xml
@@ -93,4 +93,11 @@
     </plugins>
   </reporting>
 
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <url>https://maven.pkg.github.com/EliasStar/JsonRpc4J</url>
+    </repository>
+  </distributionManagement>
+
 </project>
