--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
 
       - run: mvn package
 
-      - id: tagToVersion
+      - id: tag-version
         run: echo '::set-output name=version::${RELEASE_TAG_NAME:1}'
         env:
           RELEASE_TAG_NAME: ${{ github.event.release.tag_name }}
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./target/json-rpc-${{ steps.tagToVersion.outputs.version }}.jar
+          asset_path: ./target/json-rpc-${{ steps.tag-version.outputs.version }}.jar
           asset_name: JsonRpc4J ${{ github.event.release.tag_name }}
           asset_content_type: application/java-archive
 
