--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
       - run: mvn package
 
       - id: tag-version
-        run: echo '::set-output name=version::${RELEASE_TAG_NAME:1}'
+        run: echo ::set-output name=version::${RELEASE_TAG_NAME:1}
         env:
           RELEASE_TAG_NAME: ${{ github.event.release.tag_name }}
 
