--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,12 @@
 name: Test code base
 
 on: 
-  - pull_request
-  - push
+  pull_request:
+    branches:
+      - '**'
+  push:
+    branches:
+      - '**'
 
 jobs:
   test:
