--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,23 +20,15 @@ jobs:
           java-version: 11
           settings-path: ${{ github.workspace }}
 
-      - run: mvn package
+      - name: Deploy to package registry
+        run: mvn deploy -s ./settings.xml
 
-      - id: tag-version
-        run: echo ::set-output name=version::${RELEASE_TAG_NAME:1}
+      - name: Deploy javadocs to gh-pages
 
-      - uses: actions/upload-release-asset@v1
+      - run: mvn assembly:single
+
+      - name: Deploy to release
+        uses: shogo82148/actions-upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./target/json-rpc-${{ steps.tag-version.outputs.version }}.jar
-          asset_name: JsonRpc4J_${{ github.event.release.tag_name }}.jar
-          asset_content_type: application/java-archive
-
-      - uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./target/json-rpc-${{ steps.tag-version.outputs.version }}-jar-with-dependencies.jar
-          asset_name: JsonRpc4J_${{ github.event.release.tag_name }}-with-deps.jar
-          asset_content_type: application/java-archive
-
-      - run: mvn deploy -s ./settings.xml
+          asset_path: ./target/*.jar
