--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
-name: Test code base
+name: Test code
 
-on: 
+on:
   pull_request:
     branches:
       - '**'
@@ -16,8 +16,8 @@ jobs:
 
       - uses: actions/setup-java@v1
         with:
-          java-version: 14
-      
+          java-version: 11
+
       - uses: actions/cache@v2
         with:
           path: ~/.m2/repository
