--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,11 +2,11 @@ name: Test code
 
 on:
   pull_request:
-    branches:
-      - '**'
+    branches-ignore:
+      - docs
   push:
-    branches:
-      - '**'
+    branches-ignore:
+      - docs
 
 jobs:
   test:
