--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,22 +16,20 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 11
-          settings-path: ${{ github.workspace }}
+          settings-path: ${{ github.workspace }}/release
 
       - run: cd release
 
       - name: Deploy to package registry
-        run: mvn deploy -s ${{ github.workspace }}/settings.xml
+        run: mvn deploy -B -s settings.xml
 
-      - run: mvn assembly:single
+      - run: mvn assembly:single -B
 
       - name: Deploy to release
         uses: shogo82148/actions-upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: target/*.jar
-
-      - run: cd ${{ github.workspace }}
 
       - uses: actions/checkout@v2
         with:
@@ -40,6 +38,7 @@ jobs:
 
       - name: Deploy gh-pages
         run: |
+          cd ${{ github.workspace }}
           mv -f docs/.git .
           rm -rf docs/*
           mv .git docs
