--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,29 +16,24 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 11
-          settings-path: ${{ github.workspace }}/release
+          settings-path: ${{ github.workspace }}
 
-      - run: cd release
+      - run: |
+          cd release
+          mvn deploy -B -s ${{ github.workspace }}/settings.xml
+          mvn assembly:single -B
 
-      - name: Deploy to package registry
-        run: mvn deploy -B -s settings.xml
-
-      - run: mvn assembly:single -B
-
-      - name: Deploy to release
-        uses: shogo82148/actions-upload-release-asset@v1
+      - uses: shogo82148/actions-upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: target/*.jar
+          asset_path: release/target/*.jar
 
       - uses: actions/checkout@v2
         with:
           ref: docs
           path: docs
 
-      - name: Deploy gh-pages
-        run: |
-          cd ${{ github.workspace }}
+      - run: |
           mv -f docs/.git .
           rm -rf docs/*
           mv .git docs
