--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
     types:
       - created
 
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,12 +21,14 @@ jobs:
           java-version: 11
           settings-path: ${{ github.workspace }}
 
-      - run: |
+      - name: Deploy to package registry
+        run: |
           cd release
-          mvn deploy -B -s ${{ github.workspace }}/settings.xml
-          mvn assembly:single -B
+          mvn -B deploy -s ${{ github.workspace }}/settings.xml
+          mvn -B assembly:single
 
-      - uses: shogo82148/actions-upload-release-asset@v1
+      - name: Deploy to release
+        uses: shogo82148/actions-upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: release/target/*.jar
@@ -33,7 +38,8 @@ jobs:
           ref: docs
           path: docs
 
-      - run: |
+      - name: Deploy to gh-pages
+        run: |
           mv -f docs/.git .
           rm -rf docs/*
           mv .git docs
