--- a/pom.xml
+++ b/pom.xml
@@ -1,120 +1,120 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>eliasstar</groupId>
-  <artifactId>json-rpc</artifactId>
-  <version>2.0.3</version>
-  <packaging>jar</packaging>
+    <groupId>eliasstar</groupId>
+    <artifactId>json-rpc</artifactId>
+    <version>2.0.4</version>
+    <packaging>jar</packaging>
 
-  <name>JsonRpc4J</name>
-  <description>A general JSON-RPC 2.0 Wrapper for Java</description>
-  <url>https://github.com/EliasStar/JsonRpc4J</url>
-  <inceptionYear>2020</inceptionYear>
-
-  <licenses>
-    <license>
-      <name>LGPL-3.0-or-later</name>
-      <url>https://www.gnu.org/licenses/lgpl-3.0-standalone.html</url>
-      <distribution>repo</distribution>
-      <comments>GNU LESSER GENERAL PUBLIC LICENSE</comments>
-    </license>
-  </licenses>
-
-  <scm>
-    <connection>scm:git:https://github.com/EliasStar/JsonRpc4J.git</connection>
-    <developerConnection>scm:git:https://github.com/EliasStar/JsonRpc4J.git</developerConnection>
-    <tag>HEAD</tag>
+    <name>JsonRpc4J</name>
+    <description>A general JSON-RPC 2.0 Wrapper for Java</description>
     <url>https://github.com/EliasStar/JsonRpc4J</url>
-  </scm>
+    <inceptionYear>2020</inceptionYear>
 
-  <issueManagement>
-    <system>GitHub Issues</system>
-    <url>https://github.com/EliasStar/JsonRpc4J/issues</url>
-  </issueManagement>
+    <licenses>
+        <license>
+            <name>LGPL-3.0-or-later</name>
+            <url>https://www.gnu.org/licenses/lgpl-3.0-standalone.html</url>
+            <distribution>repo</distribution>
+            <comments>GNU LESSER GENERAL PUBLIC LICENSE</comments>
+        </license>
+    </licenses>
 
-  <distributionManagement>
-    <repository>
-      <id>github</id>
-      <url>https://maven.pkg.github.com/EliasStar/JsonRpc4J</url>
-    </repository>
-  </distributionManagement>
+    <scm>
+        <connection>scm:git:https://github.com/EliasStar/JsonRpc4J.git</connection>
+        <developerConnection>scm:git:https://github.com/EliasStar/JsonRpc4J.git</developerConnection>
+        <tag>HEAD</tag>
+        <url>https://github.com/EliasStar/JsonRpc4J</url>
+    </scm>
 
-  <properties>
-    <java.version>11</java.version>
-    <encoding>UTF-8</encoding>
+    <issueManagement>
+        <system>GitHub Issues</system>
+        <url>https://github.com/EliasStar/JsonRpc4J/issues</url>
+    </issueManagement>
 
-    <maven.compiler.source>${java.version}</maven.compiler.source>
-    <maven.compiler.target>${java.version}</maven.compiler.target>
-    <maven.compiler.release>${java.version}</maven.compiler.release>
-    <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
-  </properties>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/EliasStar/JsonRpc4J</url>
+        </repository>
+    </distributionManagement>
 
-  <dependencies>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.6</version>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <version>5.6.2</version>
-      <scope>test</scope>
-      <optional>true</optional>
-    </dependency>
-  </dependencies>
+    <properties>
+        <java.version>11</java.version>
+        <encoding>UTF-8</encoding>
 
-  <build>
-    <defaultGoal>package</defaultGoal>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M5</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>3.2.1</version>
-        <executions>
-          <execution>
-            <id>attach-sources</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.2.0</version>
-        <executions>
-          <execution>
-            <id>attach-javadocs</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>3.3.0</version>
-        <configuration>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <maven.compiler.release>${java.version}</maven.compiler.release>
+        <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.6.2</version>
+            <scope>test</scope>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <defaultGoal>clean package</defaultGoal>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
