--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
             <name>LGPL-3.0-or-later</name>
             <url>https://www.gnu.org/licenses/lgpl-3.0-standalone.html</url>
             <distribution>repo</distribution>
-            <comments>GNU LESSER GENERAL PUBLIC LICENSE</comments>
+            <comments>LESSER GNU GENERAL PUBLIC LICENSE</comments>
         </license>
     </licenses>
 
